--- a/styles.css
+++ b/styles.css
@@ -4,25 +4,26 @@
     box-sizing: border-box;
 }
 
-body, h1, p {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+html, body {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch; /* Smooth scrolling for iOS */
 }
 
 body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh; /* Adjust for dynamic content */
     background-color: #b0adad;
     color: #1d1d1f;
-    overflow-x: hidden; /* Allow vertical scrolling */
 }
 
 .container {
     text-align: center;
     max-width: 90%;
     padding: 20px;
-    overflow: auto; /* Allow scrolling within the container */
 }
 
 h1 {
@@ -68,7 +69,6 @@ table {
     width: 100%;
     background-color: #b0adad;
     font-size: 2rem;
-
 }
 th, td {
     border: 1px solid #555;
