--- a/styles.css
+++ b/styles.css
@@ -86,12 +86,12 @@ th {
 .links {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 50px;
 }
 
 .links a img {
-    width: 40px;
-    height: 40px;
+    /* width: 100%; */
+    /* height: 100%; */
     transition: all 0.3s ease-in-out;
 }
 
