--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ table {
 th, td {
     border: 1px solid #555;
     padding: 10px;
-    text-align: left;
+    text-align: center;
 }
 th {
     background-color: #b0adad;
