--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,8 @@ h1 {
 h2 {
     font-size: 2rem;
     color: #000000;
-    margin-bottom: 20px;
-    line-height: 1.5;
+    margin-bottom: 1px;
+    line-height: 1;
 }
 
 h1:hover {
@@ -66,6 +66,12 @@ p {
     color: #000000;
     margin-bottom: 20px;
     line-height: 1.5;
+}
+
+p2 {
+    font-size: 2rem;
+    color: #000000;
+    margin-bottom: 20px;
 }
 
 table {
