--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,8 @@ th {
 }
 
 .links a img {
-    /* width: 100%; */
-    /* height: 100%; */
+    width: 60px;
+    /* height: 50%;  */
     transition: all 0.3s ease-in-out;
 }
 
