--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ table {
     font-size: 2rem;
 }
 th, td {
-    border: 1px solid #555;
+    /* border: 1px solid #555; */
     padding: 10px;
     text-align: center;
 }
