--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ table {
     font-size: 2rem;
 }
 th, td {
-    /* border: 1px solid #555; */
+    border: 0px solid #555;
     padding: 10px;
     text-align: center;
 }
@@ -90,7 +90,7 @@ th {
 }
 
 .links {
-    /* display: flex; */
+    display: flex;
     justify-content: center;
     gap: 50px;
 }
