--- a/styles.css
+++ b/styles.css
@@ -77,12 +77,13 @@ p2 {
 table {
     border-collapse: collapse;
     width: 100%;
+    height: auto;
     background-color: #b0adad;
     font-size: 2rem;
 }
 th, td {
     border: 0px solid #555;
-    /* padding: 10px; */
+    padding: 10px;
     text-align: center;
 }
 th {
