--- a/styles.css
+++ b/styles.css
@@ -62,9 +62,9 @@ img:hover {
 }
 
 p {
-    font-size: 1rem;
+    /* font-size: 1rem; */
     color: #000000;
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
     line-height: 1.5;
 }
 
