--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ img:hover {
 }
 
 p {
-    /* font-size: 1rem; */
+    font-size: 1.2rem;
     color: #000000;
     margin-bottom: 20px;
     line-height: 1.5;
