--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,8 @@ th, td {
     border: 0px solid #555;
     padding: 10px;
     text-align: center;
+    width: auto;
+    height: auto;
 }
 th {
     background-color: #b0adad;
