--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ p2 {
 
 table {
     border-collapse: collapse;
-    width: 100%;
+    width: auto;
     height: auto;
     background-color: #b0adad;
     font-size: 1rem;
