--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -19,6 +21,7 @@ html, body {
 }
 
 body {
+    font-family: 'Poppins', sans-serif;
     background-color: #b0adad;
     color: #000000; /* Default text color for light mode */
 }
