--- a/styles.css
+++ b/styles.css
@@ -57,27 +57,6 @@ h2 {
     font-size: 2rem !important;
 }
 
-/* Adjustments for Smaller Screens */
-@media (max-width: 768px) {
-    h1 {
-        font-size: 2.2rem !important;
-    }
-
-    h2 {
-        font-size: 1.8rem !important;
-    }
-}
-
-@media (max-width: 480px) {
-    h1 {
-        font-size: 2rem !important;
-    }
-
-    h2 {
-        font-size: 1.6rem !important;
-    }
-}
-
 /* Paragraphs */
 p {
     font-size: 1.2rem;
@@ -109,6 +88,12 @@ th {
     display: flex;
     justify-content: center;
     gap: 50px;
+}
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Centers image */
 }
 
 .links a img {
@@ -145,7 +130,18 @@ button:focus {
     }
 }
 
-/* Small Screen Adjustments */
+
+/* Adjustments for Smaller Screens */
+@media (max-width: 768px) {
+    h1 {
+        font-size: 2.2rem !important;
+    }
+
+    h2 {
+        font-size: 1.8rem !important;
+    }
+}
+
 @media (max-width: 480px) {
     h1 {
         font-size: 2rem !important;
