--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh
+    min-height: 100vh;
 }
 
 /* Headings */
@@ -96,6 +96,7 @@ table {
     font-size: 1rem;
     color: inherit;
     margin:0 auto;
+    font-size: 1.2rem;
 }
 
 th, td {
