--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,10 @@ button:focus {
     outline-offset: 2px;
 }
 
+footer {
+    font-size: 0.7rem;
+}
+
 /* Dark Mode */
 @media (prefers-color-scheme: dark) {
     body {
@@ -180,11 +184,13 @@ button:focus {
 /* Small Screen Adjustments */
 @media (max-width: 480px) {
     h1 {
-        font-size: 2rem;
+        font-size: 1.2rem;
     }
-
+    footer {
+        font-size: 0.7rem;
+    }
     p {
-        font-size: 0.9rem;
+        font-size: 1.2rem;
     }
 
     .links a img {
