--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,15 @@ th {
     background-color: #b0adad;
 }
 
+.online {
+    color: green;
+    font-weight: bold;
+}
+.offline {
+    color: red;
+    font-weight: bold;
+}
+
 /* Links */
 .links {
     display: flex;
