--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Import Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap&font-display=swap');
 
 /* Global Styles */
 * {
@@ -237,6 +237,8 @@ footer {
     }
     table {
         font-size: 0.9rem;
+        overflow-x: auto;
+        display: block;
     }
     th, td {
         border: none;
